welcome.css : fix overflow issue

--- a/apps/public/static/css/welcome.css
+++ b/apps/public/static/css/welcome.css
@@ -40,6 +40,7 @@ a.active {
 .container-fluid {
 	background-color: #fffef7;
 	padding: 0;
+	overflow-x: hidden;
 }
 
 #main-container {
